# hibob-mcp-fork

./: README.md  pyproject.toml
hibob_public_mcp/: cli.py  mcp_server.py
