[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hibob-mcp-fork"
version = "0.5.0"
description = "HiBob MCP server integration (VSP fork with humanReadable support)."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Ori Danus", email = "ori.danus@hibob.com" },
    { name = "VSP DOQ Team" }
]
dependencies = [
    "fastmcp",
    "requests"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
packages = ["hibob_public_mcp"]

[project.scripts]
hibob-mcp-fork = "hibob_public_mcp.cli:main"
